# tfg_ros_simulation

./: README.md  ignore_all_pkgs.sh
Coppelia_scenes/: ros2_mobile_robot.ttt
coppelia_ros2_pkg/: CMakeLists.txt  package.xml
coppelia_ros2_pkg/launch/: coppeliaSim.launch
coppelia_ros2_pkg/scenes/: ros2_mobile_robot.ttt
coppelia_ros2_pkg/src/: run_coppelia_simulator.cpp
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/launch/: keyboard_control.launch
keyboard_control/src/: keyboard_control.cpp  keyboard_control_plus.cpp
missions_pkg/: CMakeLists.txt
missions_pkg/launch/: .simbot_move_base.launch.kate-swp  main.launch  mapper_params_online_async.yaml  nav2_launch.py  nav2_params.yaml  online_async_launch.py  rviz.launch  simbot_move_base.launch  simulator.launch  slam_mapping.py  slam_mapping_params.yaml
missions_pkg/maps/: coppelia_map_gmapping.pgm  coppelia_map_gmapping.yaml
missions_pkg/rviz/: coppelia_sim.rviz
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py
py_srvcli/: package.xml  setup.py
py_srvcli/py_srvcli/: client_member_function.py
sim_ros2_interface/: CMakeLists.txt  README.md
sim_ros2_interface/meta/: interfaces.txt
